fix: override important on aside element on the MWP site which was messing with header spacing

--- a/public/css/gpalab-slo-front.css
+++ b/public/css/gpalab-slo-front.css
@@ -132,8 +132,8 @@ a:active {
 
 /* Utilities */
 .stack > * + * {
-  margin-top: var(--length-1-5);
-  margin-bottom: 0;
+  margin-top: var(--length-1-5) !important;
+  margin-bottom: 0 !important;
 }
 
 .list-reset {
